add: order route and its template

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -4,13 +4,13 @@
         lang="en"
 >
 <head>
-    <title>Taco Cloud</title>
+    <title>Coffee Cloud</title>
     <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 
 <body>
 <h1>Design your taco!</h1>
-<img th:src="@{/images/coffee-icon.png}" alt=""/>
+<img th:src="@{/images/coffee-icon.svg}" alt="" style="aspect-ratio: 1/1; width: 50px"/>
 
 <form method="POST" th:object="${coffee}">
     <div class="grid">
