add: tailwind css

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link th:rel="stylesheet" th:href="@{/css/output.css}"/>
 </head>
 <body>
     <main>
-        <h1>Home page xdd</h1>
+        <h1 class="text-amber-800">Home page xdd</h1>
         <img th:src="@{/images/coffee-icon.svg}"
             style="aspect-ratio: 1/1; width: 50px"
         />
