--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,11 +6,18 @@
     <link th:rel="stylesheet" th:href="@{/css/output.css}"/>
 </head>
 <body>
-    <main>
-        <h1 class="text-amber-800">Home page xdd</h1>
-        <img th:src="@{/images/coffee-icon.svg}"
-            style="aspect-ratio: 1/1; width: 50px"
-        />
+    <main class="h-screen w-screen p-8">
+        <nav class="flex items-center justify-start gap-x-6">
+            <h1 class="text-xl font-bold text-stone-800">Coffee Cloud</h1>
+            <img th:src="@{/images/coffee-icon.svg}"
+                 class="aspect-square w-10"
+            />
+        </nav>
+        <a class="w-fit mt-8 py-2 px-4 block border-b-2 border-b-blue-300 hover:border-b-green-300 transition-colors duration-1000"
+           th:href="@{/design}"
+        >
+            Design you coffee
+        </a>
     </main>
 </body>
 </html>
